--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vis.gl/react-google-maps": "^1.7.1",
     "framer-motion": "^12.24.12",
     "google-map-react": "^2.2.5",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
