--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.8",
     "@vis.gl/react-google-maps": "^1.7.1",
     "framer-motion": "^12.24.12",
     "google-map-react": "^2.2.5",
